      only time you see the huge chart options section is when editing a
      chart item.
    * Item type is now a popup menu button, so more item types can be
      added without the list extending infinitely to the right.
  * by sheer coincidence, fixed a few buffer overflow bugs
  * fixed some missing/wrong docs while adding qt-related info
  * removed #if 0-d features; if they haven't been implemented since 2001,
    they probably never will:
    * separator before summary header
    * View:  a summary window on another database (I will do something
      similar for the foreign key feature later).  Note that q_dbase,
      query, q_summ, q_first, q_last will no longer written to/read from
      the .gf file.
    * min field length.  I will convert this to a non-empty flag.  It
      could also be validated by my suggested input pattern replacement.
      Note that minlen will no longer be written to/read from the .gf file.
    * Input pattern:  this may be a good idea some time in the future as
      a field validator, but as an expression.  For this, regex support
      should be in the expressions.  Note that pattern will no longer be
      written to/read from the .gf file. (added to TODO.md)
    * Many chart-related options.  The whole chart thing needs to be
      rethought, anyway.  I have no intention of re-implementing gdchart
      here.  Note that ch_label, ch_xexpr, ch_yexpr, will no longer be written to/read
      from the .gf file.
  * Now uses the color application icon.  The old icon is still there for
    reference, but I'm not even going to bother packaging it.

Version 2.1
    * The conditional expressions (Grayed out if,  ...) are now combo
      boxes, to make it easier to set groups of widgets to the same
      expression (not that copy/paste doesn't work well, too)
    * Added regular expression functions match, sub, gsub.  Also, since
      backslash-substitution isn't done anywhere else (except "), bsub.